More work on multi island. Fixed tests so clean compile.